Began tests on GoalStateSizes Added tracer reference